# gym_ped_sim

./: .gitignore  LICENSE  readme.md
actor_plugin/: CMakeLists.txt  package.xml
actor_plugin/include/: .ActorPlugin.hh.swp  ActorParam.h  ActorPlugin.hh
actor_plugin/src/: ActorParam.cpp  ActorPlugin_ros.cc  forceFactors.yaml
actor_services/: CMakeLists.txt  package.xml  random
actor_services/launch/: ped_launch.launch  ped_launch_crossing.launch  ped_launch_overtaking.launch  ped_launch_passing.launch  ped_launch_passing_4.launch  ped_launch_without_visual_crossing.launch  ped_launch_without_visual_overtaking.launch  ped_launch_without_visual_passing.launch  ped_launch_without_visual_random.launch  test.launch
actor_services/param/: forceFactors.yaml  forceFactors_passing4.yaml
actor_services/rviz/: tf_show.rviz
actor_services/src/: crossing.py  crossing_wall.py  crossing_wall_1.py  crossing_wall_3.py  crossing_wall_4.py  forceFactors.yaml  multiforceFactors.yaml  overtaking.py  overtaking_wall.py  overtaking_wall_1.py  overtaking_wall_4.py  passing_wall.py  passing_wall_1.py  passing_wall_3.py  passing_wall_3_2.py  passing_wall_4.py  random_creat.py  random_create.py
actor_services/srv/: GetVel.srv  SetPose.srv
actor_services/worlds/: corridor3m.world  corridor4m.world  crossing3m.world  crossing4m.world  empty.world  ped.world  ped_world.world  test.world
actorplugin/: CMakeLists.txt  package.xml
actorplugin/include/: ActorPlugin.hh.origin
data_collection/: CMakeLists.txt  package.xml
turtlebot3_social/: .gitignore  CMakeLists.txt  package.xml
(+24 files in other folders)
